added device mockup shots for projects

--- a/index.html
+++ b/index.html
@@ -89,22 +89,39 @@
             <div class="about-container">
                 <h2 class="about-title">About me</h2>
                 <div class="about-text">
-                    <p >I am a French native and been living in Toronto, Ontario, Canada for the past 8 years. I love the outdoors (camping, hiking, biking, snowshoeing, you name it!).</p>
-                    <p>Web development is a great combination of who I am: integrating the technical, problem-solving side of me in the software implementation, while still channelling my creative self in making every web application I create, pixel-perfect.</p>
-                    <p>I have a habit of fully investing in any project or goal in front of me.</p>
+                    <p>Hello! Bonjour! I'm Alix Faudot, a front-end web developer based out of Toronto (it's been my home since moving from France over 8 years ago).</p>
+                    <p>Web development allows me to integrate the technical, problem-solving side of me in the software implementation, while still channelling my creative self in making every web application I create, pixel-perfect.</p>
+                    <p>When I'm not coding, you will find me on my bike around the city, eating lots of fruits and exploring the outdoors in all seasons (camping, hiking, swimming, iceskating, snowshoeing, you name it!)</p>
                 </div>
                     <nav class="social-nav about-links">
                         <ul>
                             <li>
-                                <a href=""><i class="fa-brands fa-github"></i></a>
+                                <a href="https://github.com/alixfcodes"
+                                target="_blank" 
+                                rel="noopener noreferrer" 
+                                aria-hidden="true"
+                                title= "GitHub"><i class="fa-brands fa-github"></i></a>
                             <li>
-                                <a href=""><i class="fa-brands fa-linkedin"></i></a>
+                                <a href="https://www.linkedin.com/in/alixfaudot/?locale=en_US"
+                                target="_blank" 
+                                rel="noopener noreferrer" 
+                                aria-hidden="true"
+                                title= "LinkedIn"><i class="fa-brands fa-linkedin"></i></a>
                             </li>
                             <li>
-                                <a href=""><i class="fa-brands fa-twitter"></i></a>
+                                <a href="https://twitter.com/alixfcodes"
+                                target="_blank" 
+                                rel="noopener noreferrer" 
+                                aria-hidden="true"
+                                title= "Twitter"><i class="fa-brands fa-twitter"></i>
+                                </a>
                             </li>
                         </ul>
-                        <a href="" download=""><button class="button borderless">Download Resume</button></a>
+                        <a href="./assets/alix-faudot-resume.pdf" download="./assets/alix-faudot-resume.pdf"
+                            target="_blank" 
+                            rel="noopener noreferrer" 
+                            aria-hidden="true"><button class="button borderless">Download Resume</button>
+                        </a>
                     </nav>
             </div>
 
@@ -196,11 +213,11 @@
      data-aos-easing="ease-out-cubic"
      data-aos-duration="2000">
                         <div class="project-image">
-                            <img src="./assets/portfolio-image-placeholder.jpg" alt="thumbnail of Musings of Willow project">
+                            <img src="./assets/daily-musings-of-willow.png" alt="thumbnail of Musings of Willow project">
                         </div>
                         <div class="project-description">
-                            <h4>Musings of Willow</h4>
-                            <p>A multi-page, functional, and responsive website implemented from a design.</p>
+                            <h4>Daily Musings of Willow</h4>
+                            <p>Multi-page PSD conversion made using a client brief and design files. Responsive across devices.</p>
                             <ul class="tools-used">
                                 <li>HTML</li>
                                 <li>CSS</li>
@@ -208,8 +225,8 @@
                                 <li>JavaScript</li>
                             </ul>
                             <div class="project-links" tabindex="0">
-                            <a href="" class="button" target="_blank">view live</a>
-                            <a href="" class="button borderless" target="_blank">view code</a>
+                            <a href="https://musings-of-willow.netlify.app/" class="button" target="_blank" rel="noopener noreferrer">view live</a>
+                            <a href="https://github.com/alixfcodes/alix-faudot-project-one" class="button border" target="_blank" rel="noopener noreferrer">view code</a>
                             </div>
                         </div>
 
@@ -218,28 +235,29 @@
                 <div class="project project-2">
                         <div class="project-description">
                             <h4>Feel Good Makeup</h4>
-                            <p>This paired programming project was created with Chris West using an API.</p>
+                            <p>An app using the Makeup API that allows eco-conscious folks to find a make up that's good for them and the environment. Paired programming with <a href="" target="_blank" 
+                            rel="noopener noreferrer" class="inline-link">Chris West</a>.</p>
                             <ul class="tools-used">
-                                <li>RESTful API</li>
+                                <li>API</li>
                                 <li>CSS</li>
                                 <li>Sass</li>
                                 <li>HTML</li>
                                 <li>JavaScript</li>
                             </ul>
                             <div class="project-links" tabindex="0">
-                                <a href="" class="button" target="_blank">view live</a>
-                                <a href="" class="button borderless" target="_blank">view code</a>
+                                <a href="https://feel-good-makeup.netlify.app/" class="button" target="_blank" rel="noopener noreferrer">view live</a>
+                                <a href="https://github.com/cohort42-project2-alix-chris/feel-good-makeup" class="button border" target="_blank" rel="noopener noreferrer">view code</a>
                             </div>
                         </div>
                         <div class="project-image">
-                            <img src="./assets/portfolio-image-placeholder.jpg" alt="thumbnail of Feel Good Makeup project">
+                            <img src="./assets/feel-good-makeup.png" alt="thumbnail of Feel Good Makeup project">
                         </div>
                 </div>
             </div>
             <div class="projects-container">
                 <div class="project project-3">
                         <div class="project-image">
-                            <img src="./assets/portfolio-image-placeholder.jpg" alt="thumbnail of X project">
+                            <img src="./assets/placeholder-image.png" alt="thumbnail of X project">
                         </div>
                         <div class="project-description">
                             <h4>Project 3</h4>
@@ -250,8 +268,8 @@
                                 <li>CSS</li>
                             </ul>
                             <div class="project-links" tabindex="0">
-                                <a href="" class="button" target="_blank">view live</a>
-                                <a href="" class="button borderless" target="_blank">view code</a>
+                                <a href="" class="button" target="_blank" rel="noopener noreferrer">view live</a>
+                                <a href="" class="button border" target="_blank" rel="noopener noreferrer">view code</a>
                             </div>
                         </div>
                 </div>
@@ -266,12 +284,12 @@
                                 <li>Firebase</li>
                             </ul>
                             <div class="project-links" tabindex="0">
-                                <a href="" class="button" target="_blank">view live</a>
-                                <a href="" class="button borderless" target="_blank">view code</a>
+                                <a href="" class="button" target="_blank" rel="noopener noreferrer">view live</a>
+                                <a href="" class="button border" target="_blank" rel="noopener noreferrer">view code</a>
                             </div>
                         </div>
                         <div class="project-image">
-                            <img src="./assets/portfolio-image-placeholder.jpg" alt="thumbnail of X project">
+                            <img src="./assets/placeholder-image.png" alt="thumbnail of X project">
                         </div>
 
                 </div>
@@ -288,18 +306,36 @@
                     <nav class="social-nav">
                         <ul>
                             <li>
-                                <a href=""><i class="fa-brands fa-github"></i></a>
+                                <a href="https://github.com/alixfcodes"                                target="_blank" 
+                                rel="noopener noreferrer" 
+                                aria-hidden="true"
+                                title= "GitHub"><i class="fa-brands fa-github"></i></a>
                             <li>
-                                <a href=""><i class="fa-brands fa-linkedin"></i></a>
+                                <a href="https://www.linkedin.com/in/alixfaudot/?locale=en_US"
+                                target="_blank" 
+                                rel="noopener noreferrer" 
+                                aria-hidden="true"
+                                title= "LinkedIn"><i class="fa-brands fa-linkedin"></i></a>
                             </li>
                             <li>
-                                <a href=""><i class="fa-brands fa-twitter"></i></a>
+                                <a href="https://twitter.com/alixfcodes"
+                                target="_blank" 
+                                rel="noopener noreferrer" 
+                                aria-hidden="true"
+                                title= "Twitter"><i class="fa-brands fa-twitter"></i></a>
                             </li>
                             <li>
-                                <a href="mailto: alixfaudot@gmail.com"><i class="fa-solid fa-envelope"></i></a>
+                                <a href="mailto: alixfaudot@gmail.com"
+                                target="_blank" 
+                                rel="noopener noreferrer" 
+                                aria-hidden="true"
+                                title= "Email"><i class="fa-solid fa-envelope"></i></a>
                             </li>
                             <li>
-                                <a href="https://calendly.com/alixfaudot" target="_blank"><i class="fa-solid fa-calendar"></i></a>
+                                <a href="https://calendly.com/alixfaudot"                                 target="_blank" 
+                                rel="noopener noreferrer" 
+                                aria-hidden="true"
+                                title= "Calendly"><i class="fa-solid fa-calendar"></i></a>
                             </li>
                         </ul>
                     </nav>
