--- a/index.html
+++ b/index.html
@@ -4,6 +4,10 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="apple-touch-icon" sizes="180x180" href="./assets/favicon_io/apple-touch-icon.png">
+    <link rel="icon" type="image/png" sizes="32x32" href="./assets/favicon_io/favicon-32x32.png">
+    <link rel="icon" type="image/png" sizes="16x16" href="./assets/favicon_io/favicon-16x16.png">
+    <link rel="manifest" href="/site.webmanifest">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/gh/devicons/devicon@v2.15.1/devicon.min.css">
     <script src="https://kit.fontawesome.com/522cdd93db.js" crossorigin="anonymous"></script>
     <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -22,9 +26,6 @@
             <!-- NAV -->
             <nav class="desktop-nav">
                     <div class="logo">AF</div>
-                    <!-- <button tabindex="0">
-                        <i class="hidden-menu-select fas fa-ellipsis-v" aria-label="open menu"></i>
-                    </button> -->
                     <ul class="desktop-menu-dropdown">
                         <li class="nav-item" tabindex="0">
                             <a href="#home" class="nav-icon"><p class="nav-item-text">Home</p></a>
