added projects 3 and 4

--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
         <div class="header-container wrapper">
             <!-- NAV -->
             <nav class="desktop-nav">
-                    <div class="logo">AF</div>
+                    <!-- <div class="logo">AF</div> -->
                     <ul class="desktop-menu-dropdown">
                         <li class="nav-item" tabindex="0">
                             <a href="#home" class="nav-icon"><p class="nav-item-text">Home</p></a>
@@ -43,7 +43,7 @@
                             <a href="#contact" class="nav-icon"><p class="nav-item-text">Contact</p></a>
                         </li>
                     </ul>
-                <div class="mode-switch">ON/OFF</div>
+                <!-- <div class="mode-switch">ON/OFF</div> -->
                 <div id="hamburger-icon" class="button border" onclick="toggleMobileMenu(this)">
                     <div class="bar1"></div>
                     <div class="bar2"></div>
@@ -117,12 +117,12 @@
                                 </a>
                             </li>
                         </ul>
-                        <a href="./assets/alix-faudot-resume.pdf" download="./assets/alix-faudot-resume.pdf" target="_blank" rel="noopener noreferrer" class="button borderless">Download Resume</a>
+                        <!-- <a href="./assets/alix-faudot-resume.pdf" target="_blank" rel="noopener noreferrer" class="button borderless">Download Resume</a> -->
                     </nav>
                 </div>
                 <div class="about-image">
                     <div class="about-photo">
-                        <img src="./assets/about-image.jpeg" alt="portrait photo of alix faudot" aria-hidden="true">
+                        <img src="./assets/alix-faudot-headshot.jpg" alt="portrait photo of alix faudot" aria-hidden="true">
                     </div>
                 </div>
             </div><!-- END of WRAPPER -->
@@ -224,7 +224,7 @@
                     <div class="project project-2" data-aos="fade-zoom-in" data-aos-easing="ease-in-back" data-aos-duration="1000" data-aos-delay="100">
                         <div class="project-description">
                             <h4>Feel Good Makeup</h4>
-                            <p>An app using the Makeup API that allows eco-conscious folks to find a make up that's good for them and the environment. Paired programming with <a href="" target="_blank" rel="noopener noreferrer" class="inline-link">Chris West</a>.</p>
+                            <p>An app using the Makeup API that allows eco-conscious folks to find a make up that's good for them and the environment. Paired programming with <a href="https://www.chriswestcodewrangler.com/" target="_blank" rel="noopener noreferrer" class="inline-link">Chris West</a>.</p>
                             <ul class="tools-used">
                                 <li>API</li>
                                 <li>CSS</li>
@@ -248,23 +248,23 @@
                             <img src="./assets/placeholder-image.png" alt="thumbnail of X project">
                         </div>
                         <div class="project-description">
-                            <h4>Project 3</h4>
-                            <p>This app was my first time creating something with React.</p>
+                            <h4>All Out Of</h4>
+                            <p>This app was my first time creating something with React. It is a simple but very useful grocery list that allows the user to add depleted items, and then delete them from the list when shopped.</p>
                             <ul class="tools-used">
                                 <li>React</li>
                                 <li>Firebase</li>
                                 <li>CSS</li>
                             </ul>
                             <div class="project-links" tabindex="0">
-                                <a href="" class="button" target="_blank" rel="noopener noreferrer">view live</a>
-                                <a href="" class="button border" target="_blank" rel="noopener noreferrer">view code</a>
+                                <a href="https://grocery-list-main.netlify.app/" class="button" target="_blank" rel="noopener noreferrer">view live</a>
+                                <a href="https://github.com/alixfcodes/alix-faudot-project-three" class="button border" target="_blank" rel="noopener noreferrer">view code</a>
                             </div>
                         </div>
                     </div>
                     <div class="project project-4" data-aos="fade-zoom-in" data-aos-easing="ease-in-back" data-aos-duration="1000" data-aos-delay="100">
                         <div class="project-description">
                             <h4>Project 4</h4>
-                            <p>An app created with React and an API. This was a group project made by A, B, C, and myself.</p>
+                            <p>A group programming project developed by Corey DeCaire, Frances McKenzie & Matt Russell and myself. Users input a word to start their haiku, then the Datamuse API returns words that often follow that word; the returned words are used to create a word buttons that the user can select from to continue their haiku. The Datamuse API continues to return new word options until the user has completed their haiku!</p>
                             <ul class="tools-used">
                                 <li>API</li>
                                 <li>React</li>
@@ -272,8 +272,8 @@
                                 <li>Firebase</li>
                             </ul>
                             <div class="project-links" tabindex="0">
-                                <a href="" class="button" target="_blank" rel="noopener noreferrer">view live</a>
-                                <a href="" class="button border" target="_blank" rel="noopener noreferrer">view code</a>
+                                <a href="https://haiku-highway.netlify.app/" class="button" target="_blank" rel="noopener noreferrer">view live</a>
+                                <a href="https://github.com/haiku-highway/haiku-highway" class="button border" target="_blank" rel="noopener noreferrer">view code</a>
                             </div>
                         </div>
                         <div class="project-image">
